# stam

./: .gitignore  .gitmodules  CMakeLists.txt  application.cpp  application.h  demogame.cpp  demogame.h  game.cpp  game.h  geometry.cpp  geometry.h  main.cpp  renderer.h  shader.cpp  shader.h
assets/shaders/: color.vert
